somente css, e js cadLivro e cadUser

--- a/styleAcervo.css
+++ b/styleAcervo.css
@@ -235,11 +235,12 @@ body {
 }
 
 .livro-card {
-  background-color: var(--white);
+  background-color: var(--primary-red);
   border-radius: 10px;
   padding: 20px;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
   transition: transform 0.2s ease, box-shadow 0.2s ease;
+  color: var(--secondary-gray)
 }
 
 .livro-card:hover {
