--- a/styleCadLivro.css
+++ b/styleCadLivro.css
@@ -268,7 +268,7 @@ select:focus {
   border-color: var(--primary-red);
 }
 
-/* Contador embutido no input */
+/* ===== CONTADOR NO INPUT ===== */
 .input-counter {
   position: absolute;
   right: 10px;
@@ -319,6 +319,31 @@ textarea {
 .form-actions button[type="reset"]:hover {
   background-color: #333;
 }
+
+/* ===== ANCÔRA ===== */
+.voltar-topo img{
+  width: 15px;
+  height: 15px;
+}
+.voltar-topo {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  background-color: #c41e3a;
+  color: white;
+  padding: 10px 15px;
+  border-radius: 8px;
+  text-decoration: none;
+  display: none; /* começa invisível */
+  transition: opacity 0.3s ease;
+}
+
+.voltar-topo.mostrar {
+  display: block;
+  opacity: 1;
+}
+
+
 
 /* ===== RESPONSIVIDADE ===== */
 @media (max-width: 768px) {
