autenticação e logout feito (front)

--- a/styleIndex.css
+++ b/styleIndex.css
@@ -1,5 +1,5 @@
 /* ====== BASE GERAL ====== */
-@import url("styleCadUser.css");
+@import url("styleCadLivro.css");
 
 /* ====== CONTEÚDO ESPECÍFICO DA PÁGINA INICIAL ====== */
 
