--- a/styleAcervo.css
+++ b/styleAcervo.css
@@ -224,7 +224,7 @@ body {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
   gap: 20px;
-  margin-top: 25px;
+  margin-top: 0px;
 }
 
 #resultados p {
@@ -312,6 +312,78 @@ body {
 .voltar-topo.mostrar {
   display: block;
   opacity: 1;
+}
+
+/* ====== LAYOUT ACERVO ALINHADO ====== */
+.acervo-layout {
+  display: flex;
+  gap: 25px;
+  align-items: flex-start;
+  margin-top: 25px;
+}
+
+/* Lista de livros */
+.lista-livros {
+  flex: 1;
+  background: var(--white);
+  border-radius: 10px;
+  padding: 25px;
+  box-shadow: 0 3px 10px rgba(0,0,0,0.1);
+  overflow-y: auto;
+}
+
+/* Detalhes MARC21 */
+.detalhes-livro {
+  flex: 1;
+  background: var(--white);
+  border-radius: 10px;
+  padding: 25px;
+  box-shadow: 0 3px 10px rgba(0,0,0,0.1);
+  overflow-y: auto;
+  transition: all 0.3s ease;
+}
+
+.detalhes-livro h2 {
+  color: var(--primary-red);
+  margin-bottom: 15px;
+  font-size: 20px;
+}
+.detalhes-livro h3{
+  color: var(--hover-red);
+  margin: 10px 0px;
+}
+
+.detalhes-livro p{
+  text-align: justify;
+}
+
+/* Botão Ver MARC21 */
+.btn-verMarc {
+  background: var(--white);
+  color: var(--primary-red);
+  border: none;
+  padding: 6px 10px;
+  border-radius: 5px;
+  font-weight: 600;
+  margin-top: 8px;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+.btn-verMarc:hover {
+  background: var(--hover-red);
+  color: var(--white);
+}
+
+/* Responsivo */
+@media (max-width: 900px) {
+  .acervo-layout {
+    flex-direction: column;
+  }
+
+  .detalhes-livro {
+    margin-top: 20px;
+  }
 }
 
 /* ====== Responsividade ====== */
